--- a/shop/views/books/list.ejs
+++ b/shop/views/books/list.ejs
@@ -10,6 +10,22 @@
         background-color: #6f42c1;
         border-color: #6e42c1b8;
     }
+    a:link{
+        color: black;
+        text-decoration: none;
+    }
+    a:visited{
+        color:indigo;
+        text-decoration: none;
+    }
+    a:hover{
+        color:magenta;
+        text-decoration: underline;
+    }
+    a:active{
+        color: #6f42c1;
+        text-decoration: none;
+    }
 </style>
 <div class="my-5">
     <h1 class="text-center mb-5">도서 목록</h1>
