--- a/shop/views/menu.ejs
+++ b/shop/views/menu.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #6f42c1;" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><i class="bi bi-book"></i></a>
+      <span class="navbar-brand"><i class="bi bi-book"></i></span>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -17,6 +17,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/books/list">도서목록</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/search">지역검색</a>
             </li>
         </ul>
         <ul class="navbar-nav d-flex">
