--- a/shop/views/footer.ejs
+++ b/shop/views/footer.ejs
@@ -1,4 +1,4 @@
 <div class="my-5">
     <hr>
-    <h4 class="text-center">Copyright 2023. 한국소프트웨어인재개발원 all rights reserved.</h4>
+    <h4 class="text-center">Copyright 2023. 한국소프트웨어인재개발원 All rights reserved.</h4>
 </div>
