--- a/shop/views/books/list.ejs
+++ b/shop/views/books/list.ejs
@@ -39,7 +39,7 @@
                     <option value="contents">내용</option>
                 </select>
                 <input name="query" class="form-control" placeholder="검색어">
-                <button class="btn" style="background-color: #6f42c1; color:#fff;">검색</button>
+                <button class="btn" style="background-color: #6f42c1; color:#fff;"><i class="bi bi-search"></i></button>
             </div>
         </form>
         <div class="col text-end">
