--- a/shop/views/local/search.ejs
+++ b/shop/views/local/search.ejs
@@ -4,7 +4,7 @@
         <form name="frm" class="col-md-4">
             <div class="input-group">
                 <input name="query" value="서점" class="form-control">
-                <button class="btn" style="background-color: #6f42c1; color:#fff;">검색</button>
+                <button class="btn" style="background-color: #6f42c1; color:#fff;"><i class="bi bi-search"></i></button>
             </div>
         </form>
     </div>
