--- a/shop/views/books/search.ejs
+++ b/shop/views/books/search.ejs
@@ -4,7 +4,7 @@
         <form name="frm" class="col-md-4 col-lg-3">
             <div class="input-group mb-3">
                 <input name="query" class="form-control">
-                <button class="btn" style="background-color:#6f42c1; color:#fff;">검색</button>
+                <button class="btn" style="background-color:#6f42c1; color:#fff;"><i class="bi bi-search"></i></button>
             </div>
         </form>
     </div>
