--- a/shop/views/home.ejs
+++ b/shop/views/home.ejs
@@ -16,7 +16,7 @@
         <form name="frm" class="col-md-4">
             <div class="input-group">
                 <input name="query" class="form-control" placeholder="검색어">
-                <button class="btn" style="background-color:#6f42c1; color:#fff;">검색</button>
+                <button class="btn" style="background-color:#6f42c1; color:#fff;"><i class="bi bi-search"></i></button>
             </div>
         </form>
         <div class="col pt-2">
